--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ section {
 /* HEADER */
 
 #header {
-	background: url(../images/background2.jpg) no-repeat center center;
+	background: url(../background2.jpg) no-repeat center center;
 	background-size: cover;
 	height: 100vh;
 	padding: 0px;
