--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ section {
 }
 
 #header .container {
-	background: url(../images/body-bg1.png) repeat 0 0;
+	background: url(./body-bg1.png) repeat 0 0;
 	height: 100vh;
 	width: 100% !important;
 	padding: 0px;
@@ -214,7 +214,7 @@ section {
 /* SUBSCRIBE */
 
 #subscribe {
-	background: url(../images/bg-subscribe.jpg) no-repeat fixed center center / cover rgba(0, 0, 0, 0);
+	background: url(./bg-subscribe.jpg) no-repeat fixed center center / cover rgba(0, 0, 0, 0);
 	padding: 0px;
 	min-height: 430px;
 }
